@@ -27,6 +27,14 @@ For massive changes, the variable names should be listed in the order in which t
 occur in the respective language files.
 
 
+VERSION 4.2.0
+
+?$pgv_lang["whatever"]								dd Monthname, year		Change codes and comments
+-----------------------------------------------------------------------------------------
++$pgv_lang["autosearch_sfullname"]		13 Feb 2008 A
++$pgv_lang["autosearch_ffullname"]    13 Feb 2008 A
++$pgv_lang["autosearch_mfullname"]    13 Feb 2008 A
+
 VERSION 4.1.6
 
 ?$pgv_lang["whatever"]								dd Monthname, year		Change codes and comments
